--- a/LoveLife-SPA/src/app/app.component.html
+++ b/LoveLife-SPA/src/app/app.component.html
@@ -1,8 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav></app-nav>
-  <h1>
-    Welcome to Love Life!
-  </h1>
-  <app-value></app-value>
+  <app-nav></app-nav>
+  <app-home></app-home> 
+ 
 
 
