--- a/LoveLife-SPA/src/app/nav/nav.component.html
+++ b/LoveLife-SPA/src/app/nav/nav.component.html
@@ -12,11 +12,27 @@
         <li class="nav-item">
           <a class="nav-link " href="#">Messages</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link " (click) ="loggedout()">Logout</a>
+        </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Username">
-        <input class="form-control mr-sm-2" type="password" placeholder="Password">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+
+      <div *ngIf="loggedin()" class="dropdown">
+        <a class="dropdown-toggle text-light" >
+          Welcome User!
+        </a>
+      
+        <div class="dropdown-menu" >
+          <a class="dropdown-item" href="#"><i class = "fa fa-user"></i>Edit Profile</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><i class = "fa fa-sign-out"></i>Logout</a>
+        </div>
+      </div>
+
+      <form *ngIf="!loggedin()" #loginForm = "ngForm" class="form-inline my-2 my-lg-0" (ngSubmit) = "Login()">
+        <input class="form-control mr-sm-2" type="text" name = "username" placeholder="Username" required [(ngModel)]="model.username">
+        <input class="form-control mr-sm-2" type="password" name = "password" placeholder="Password" required [(ngModel)]="model.password">
+        <button [disabled] = "!loginForm.valid" class=" btn btn-outline-success my-2 my-sm-0" type="submit" >Login</button>
       </form>
   </nav>
 <!-- 
