--- a/LoveLife-SPA/src/app/home/home.component.html
+++ b/LoveLife-SPA/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div *ngIf="!registerMode" style="text-align: center">
-    <h1>Find your match</h1>
+    <h1>Find your bae right here!</h1>
     <p class="lead">Come on in to view your matches... All you need to do is sign up!</p>
     <div class="text-center">
       <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
