--- a/LoveLife-SPA/src/app/nav/nav.component.html
+++ b/LoveLife-SPA/src/app/nav/nav.component.html
@@ -2,16 +2,16 @@
 
   <nav class="navbar navbar-expand-md navbar-dark bg-primary">
     <div  class="container">
-        <a class="navbar-brand" href="#">Love Life</a>
+        <a class="navbar-brand" [routerLink]="['/home']" >Love Life</a>
         <ul *ngIf="loggedin()" class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Matches</a>
+          <li class="nav-item" routerLinkActive="active" >
+            <a class="nav-link" [routerLink]="['/members']" >Matches</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['/lists']">Lists</a>
           </li>
-          <li class="nav-item" >
-            <a class="nav-link " href="#">Messages</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['/messages']">Messages</a>
           </li>
        
         </ul>
