--- a/LoveLife-SPA/src/app/members/member-card/member-card.component.html
+++ b/LoveLife-SPA/src/app/members/member-card/member-card.component.html
@@ -2,7 +2,12 @@
   <div class="card-img-wrapper">
     <img class = "card-img-top" src ="{{user.photoUrl}}" alt="{{user.knownAs}}">
     <ul class="list-inline member-icons animate text-center">
-      <li class=
+    <li class="list-inline-item"><button class="btn-primary" 
+      [routerLink]="['/members/', user.id]"><i class="fa fa-user"></i></button></li>
+       
+    <li class="list-inline-item"><button class="btn-primary"><i class="fa fa-heart"></i></button></li>
+    <li class="list-inline-item"><button class="btn-primary"><i class="fa fa-envelope"></i></button></li>
+
     </ul>
     <div class="card-body p-1">
       <h6 class="card-title text-center mb-1">
