Added photo editor component

--- a/LoveLife-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/LoveLife-SPA/src/app/members/member-edit/member-edit.component.html
@@ -58,8 +58,7 @@
               </form>
             </tab>
             <tab heading="Edit Photos ">
-                <h4>Edit photos will go here</h4>
-                <p>{{user?.interests}}</p>
+                <app-photo-editor [photos]=user.photos></app-photo-editor>
             </tab>
           </tabset>
         </div>
