--- a/LoveLife-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/LoveLife-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -2,7 +2,9 @@
   <div class="col-sm-2" *ngFor="let photo of photos">
     <img src="{{photo.url}}" class ="img-thumbnail p-1" alt="">
     <div class="text-center">
-      <button type="button" class="btn btn-sm">Main</button>
+      <button type="button" class="btn btn-sm mr-1" (click)="setMainPhoto(photo)"
+        [ngClass]="photo.isMAin ? 'btn-success active' : 'btn-secondary'"
+        [disabled]="photo.isMAin">Main</button>
       <button type="button" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></button>
     </div>
   </div>
