--- a/LoveLife-SPA/src/app/nav/nav.component.html
+++ b/LoveLife-SPA/src/app/nav/nav.component.html
@@ -4,6 +4,7 @@
     <div  class="container">
         <a class="navbar-brand" [routerLink]="['/home']" >Love Life</a>
         <ul *ngIf="loggedin()" class="navbar-nav mr-auto">
+          
           <li class="nav-item" routerLinkActive="active" >
             <a class="nav-link" [routerLink]="['/members']" >Matches</a>
           </li>
@@ -17,6 +18,9 @@
         </ul>
   
         <div *ngIf="loggedin()" class="dropdown" dropdown >
+            <span class="mr-1">
+              <img src="{{photoUrl}}" alt="">
+            </span>
           <a class="dropdown-toggle text-light" dropdownToggle>
             Welcome {{authService.decodedToken.unique_name | titlecase}} !
           </a>
