Added reactive forms to ensure photos are uploaded correctly

--- a/LoveLife-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/LoveLife-SPA/src/app/members/member-detail/member-detail.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{user?.photoUrl}}" alt="{{user?.knownAs}}">
+        <img class="card-img-top img-thumbnail" src="{{user?.photoUrl||'/LoveLife-SPA/src/assets/user.png'}}" alt="{{user?.knownAs}}">
         <div class="card-body"></div>
         <div>
           <strong>Location:</strong>
