--- a/LoveLife-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/LoveLife-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -5,7 +5,7 @@
       <button type="button" class="btn btn-sm mr-1" (click)="setMainPhoto(photo)"
         [ngClass]="photo.isMAin ? 'btn-success active' : 'btn-secondary'"
         [disabled]="photo.isMAin">Main</button>
-      <button type="button" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></button>
+      <button type="button" class="btn btn-sm btn-danger" (click)="deletePhoto(photo.id)" [disabled]="photo.isMAin"><i class="fa fa-trash-o"></i></button>
     </div>
   </div>
 </div>
