--- a/LoveLife-SPA/src/app/nav/nav.component.html
+++ b/LoveLife-SPA/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
   
         <div *ngIf="loggedin()" class="dropdown" dropdown >
             <span class="mr-1">
-              <img src="{{photoUrl}}" alt="">
+              <img src="{{photoUrl || '/LoveLife-SPA/src/assets/user.png'}}" alt="">
             </span>
           <a class="dropdown-toggle text-light" dropdownToggle>
             Welcome {{authService.decodedToken.unique_name | titlecase}} !
