--- a/LoveLife-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/LoveLife-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user?.knownAs}}">
+          <img class="card-img-top img-thumbnail" src="{{photoUrl|| '/LoveLife-SPA/src/assets/user.png'}}" alt="{{user?.knownAs}}">
           <div class="card-body"></div>
           <div>
             <strong>Location:</strong>
