added the timeAgo functionality

--- a/LoveLife-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/LoveLife-SPA/src/app/members/member-edit/member-edit.component.html
@@ -16,19 +16,19 @@
           <div class="card-body"></div>
           <div>
             <strong>Location:</strong>
-            <p>{{user?.city}}, {{user?.country}}</p>
+            <p>{{user.city}}, {{user.country}}</p>
           </div>
           <div>
             <strong>Age:</strong>
-            <p>{{user?.age}}</p>
+            <p>{{user.age}}</p>
           </div>
           <div>
             <strong>Last Active:</strong>
-            <p>{{user?.lastActive}}</p>
+            <p>{{user.lastActive | timeAgo}}</p>
           </div>
           <div>
             <strong>Member Since:</strong>
-            <p>{{user?.created}}</p>
+            <p>{{user.created | date: 'mediumDate'}}</p>
           </div>
         </div>
         <div class="card-footer">
