--- a/LoveLife-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/LoveLife-SPA/src/app/members/member-detail/member-detail.component.html
@@ -9,19 +9,19 @@
         <div class="card-body"></div>
         <div>
           <strong>Location:</strong>
-          <p>{{user?.city}}, {{user?.country}}</p>
+          <p>{{user.city}}, {{user.country}}</p>
         </div>
         <div>
           <strong>Age:</strong>
-          <p>{{user?.age}}</p>
+          <p>{{user.age}}</p>
         </div>
         <div>
           <strong>Last Active:</strong>
-          <p>{{user?.lastActive}}</p>
+          <p>{{user.lastActive | timeAgo}}</p>
         </div>
         <div>
           <strong>Member Since:</strong>
-          <p>{{user?.created}}</p>
+          <p>{{user.created | date: 'medimDate'}}</p>
         </div>
       </div>
       <div class="card-footer">
@@ -34,17 +34,17 @@
     <div class="col-sm-8">
       <div class ="tab-panel">
         <tabset>
-          <tab heading="About {{user?.knownAs}}">
+          <tab heading="About {{user.knownAs}}">
             <h4>
               Description:
             </h4>
-            <p>{{user?.introduction}}</p>
+            <p>{{user.introduction}}</p>
             <h4>Looking for:</h4>
-            <p>{{user?.lookingFor}}</p>
+            <p>{{user.lookingFor}}</p>
           </tab>
           <tab heading="Interests ">
               <h4>Interests</h4>
-              <p>{{user?.interests}}</p>
+              <p>{{user.interests}}</p>
           </tab>
           <tab heading ="Photos">
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
